# awesome-repos

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  Makefile  PRODUCT.md  README.md  docker-compose-local.yml  docker-compose-prod.yml  fly.toml  manage.py  package.json  pyproject.toml  pytest.ini  render.yaml  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
.greptile/: rules.md
apps/api/: auth.py  mcp.py  schemas.py  services.py  tests.py  utils.py  views.py
apps/core/: __init__.py  admin.py  analytics.py  api_keys.py  choices.py  context_processors.py  forms.py  model_utils.py  models.py  payments.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/core/agents/: base.py
apps/core/migrations/: 0002_initial.py  0003_alter_emailsent_email_type_delete_feedback.py  0005_alter_emailsent_email_type.py  0005_sponsoradpurchase.py  0006_merge_email_type_and_sponsor_ads.py  0007_highlighted_repo_purchase.py  0008_profile_remove_ads.py
apps/core/tests/: test_analytics.py  test_api_keys.py  test_chatwoot.py  test_delete_account.py  test_email_delivery.py  test_signup_gating.py  test_social_auth.py  test_sponsor_ads.py  test_views.py
apps/mcp_server/: apps.py  auth.py  server.py  tests.py  tools.py  urls.py  views.py
apps/pages/: test_layout_templates.py  tests.py  urls.py  views.py
apps/repos/: admin.py  apps.py  badges.py  cache.py  embeddings.py  forms.py  models.py  newsletters.py  search_services.py  services.py  signals.py  stack_detection.py  tags.py  tasks.py  tests.py  urls.py  views.py
apps/repos/migrations/: 0001_initial.py  0003_repositorysnapshot.py  0003_schedule_monthly_repository_refresh.py  0004_repositoryembedding.py  0004_repositorysnapshot.py  0005_repositoryembedding.py  0006_repository_readme_repository_readme_last_error_and_more.py  0007_repository_ai_development_signals_and_more.py  0007_repository_commit_count_and_more.py  0007_repository_generated_tags_and_more.py  0008_awesomelist_commits_count_awesomelist_default_branch_and_more.py  0008_repository_ai_development_signals_and_more.py  0008_repository_commit_count_and_more.py  (+15 more)
awesome_repos/: adapters.py  asgi.py  sentry_utils.py  settings.py  sitemaps.py  tests.py  urls.py  utils.py  wsgi.py
deployment/: Dockerfile  entrypoint.sh
frontend/: README.md
frontend/templates/: 404.html  base_app.html  base_landing.html
graphify-out/: .gitignore  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-05-30/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
scripts/: copy-app-js.mjs  copy-vendor-assets.mjs
(+87 files in other folders)
