[project]
name = "awesome_repos"
version = "0.1.0"
description = "Search and monitor GitHub repositories listed across awesome lists."
authors = [{ name = "LVTD LLC", email = "rasul@lvtd.dev" }]
requires-python = ">=3.14.5,<4.0"
dependencies = [
    "django>=6.0.5",
    "django-allauth>=65.16.1",
    "django-anymail>=15.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-ninja>=1.6.2",
    "django-q2>=1.10.0",
    "django-storages>=1.14.6",
    "django-structlog>=10.0.0",
    "django-widget-tweaks>=1.5.1",
    "fido2>=2.2.0,<3",
    "fastmcp>=3.3.1",
    "gunicorn>=26.0.0",
    "ipython>=9.13.0",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "redis>=7.4.0",
    "structlog>=25.5.0",
    "tqdm>=4.67.3",
    "whitenoise>=6.12.0",
    "sentry-sdk>=2.59.0",
    "structlog-sentry>=2.2.1",
    "posthog>=7.14.0",
    "pydantic-ai>=1.93.0",
    "pgvector>=0.4.2",
    "logfire>=4.32.1",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
    "ty>=0.0.34",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
# Avoid emitting Python 3.14-only formatting that external review tooling may not parse yet.
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "DJ",   # django-specific rules
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403", "F405", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.pyscn.output]
directory = ".pyscn/reports"

[tool.pyscn.analysis]
exclude_patterns = [
    "**/migrations/**",
    "**/tests/**",
    "**/tests.py",
    "apps/*/tests.py",
    "tests.py",
    "**/test_*.py",
    "**/*_test.py",
    "**/__pycache__/**",
    ".venv/**",
    "venv/**",
    "env/**",
]

[tool.pyscn.complexity]
max_complexity = 15

[tool.pyscn.clones]
min_lines = 20
similarity_threshold = 0.90

[tool.djlint]
profile="django"
ignore = "H031,H006,H023,H021,H011,T002"
per-file-ignores = { "frontend/templates/base_app.html" = "H016,H030", "frontend/templates/base_landing.html" = "H016,H030" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
